# social-media-app

./: LICENSE
backend/: .gitignore  (+3 more)
backend/python-fastapi/: Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  scripts.py
backend/python-fastapi/alembic/: env.py
backend/python-fastapi/alembic/versions/: 19fd05c8e081_initial.py  26bdc2b0f5ee_add_admin.py  38f9c4c80cf4_initial.py
backend/python-fastapi/app/: database.py  env.py  logging.py  main.py  models.py  schemas.py
backend/python-fastapi/app/guards/: role.py
backend/python-fastapi/app/routers/: auth.py  comments.py  posts.py  users.py
backend/python-fastapi/app/services/: crypt.py  jwt.py
backend/python-fastapi/docker/: build.ps1  logs.ps1  run.ps1  stop.ps1
backend/python-fastapi/extra/: fastapi.service  gunicorn.service
backend/python-fastapi/scripts/: _prepare_script.py  cli.py  create_admin.py  create_tables.py
backend/python-fastapi/server/: database.py  env.py  errors.py  logging.py  main.py  models.py
backend/python-fastapi/server/controllers/: auth_controller.py  comments_controller.py  posts_controller.py  tests_controller.py  users_controller.py
backend/python-fastapi/server/dto/: __init__.py  _commons.py  _page_dto.py  auth_dto.py  comments_dto.py  posts_dto.py  users_dto.py
backend/python-fastapi/server/repositories/: comments_repository.py  posts_repository.py  user_repository.py
backend/python-fastapi/tests/: conftest.py  database.py  examples_test.py  tables.py  test_auth.py  test_health.py
(+397 files in other folders)
